<?xml version="1.0"?>
<package format="3">
  <name>multi_map_navigator</name>
  <version>0.0.1</version>
  <description>Multi-map navigation with custom action</description>

  <maintainer email="vidhun.v@eyerov.com">Vidhun V Varrier</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
